gccida/g1/process_insert_insn
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_insert_insn/src/gcse.c:5065:29: error: use of undeclared identifier 'machine_mode'
if ( general_operand( v2, ( machine_mode)*( ( unsigned __int8 *)reaching_reg + 2)) ) 
                            ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_insert_insn/src/obj/gcse.o] Error 1
